--- a/manifest.json
+++ b/manifest.json
@@ -28,16 +28,6 @@
       "type":"image/png"
     },
     {
-      "src":"/mi_andreani_256.png",
-      "sizes":"256x256",
-      "type":"image/png"
-    },
-    {
-      "src":"/mi_andreani_384.png",
-      "sizes":"384x384",
-      "type":"image/png"
-    },
-    {
       "src":"/mi_andreani_512.png",
       "sizes":"512x512",
       "type":"image/png"
@@ -45,6 +35,15 @@
   ],
   "categories": [
     "utilities"
+  ],
+  "shortcuts": [
+    {
+      "name": "Open About",
+      "short_name": "About",
+      "description": "Open the about page",
+      "url": "/about",
+      "icons": [{ "src": "mi_andreani_192.png", "sizes": "192x192" }]
+    }
   ],
   "edge_side_panel": {
     "preferred_width": 400
