--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "short_name": "SPA-Fichadas-MiAndreani",
   "id": "SPA-Fichadas-MiAndreani-PocWidget-",
   "description": "POC Widget de Fichadas Mi Andreani",
-  "start_url": "/poc-project/",
+  "start_url": "/",
   "display": "standalone",
   "orientation": "any", 
 "screenshots": [
@@ -28,6 +28,16 @@
       "type":"image/png"
     },
     {
+      "src":"/mi_andreani_256.png",
+      "sizes":"256x256",
+      "type":"image/png"
+    },
+    {
+      "src":"/mi_andreani_384.png",
+      "sizes":"384x384",
+      "type":"image/png"
+    },
+    {
       "src":"/mi_andreani_512.png",
       "sizes":"512x512",
       "type":"image/png"
@@ -36,17 +46,32 @@
   "categories": [
     "utilities"
   ],
-  "shortcuts": [
-    {
-      "name": "Open About",
-      "short_name": "About",
-      "description": "Open the about page",
-      "url": "/about",
-      "icons": [{ "src": "mi_andreani_192.png", "sizes": "192x192" }]
-    }
-  ],
   "edge_side_panel": {
     "preferred_width": 400
   },
-  "ms_ac_template": "./poc-widget.json"
+  "widgets": [
+    {
+        "name": "HCM",
+        "description": "widget to control the HCM",
+        "tag": "hcm",
+        "template": "pwamp-template",
+        "ms_ac_template": "/hcm-card.json",
+        "type": "application/json",
+        "screenshots": [
+            {
+                "src": "https://www.pwabuilder.com/assets/screenshots/screen1.png",
+                "sizes": "600x400",
+                "label": "The PWAmp mini-player widget"
+            }
+        ],
+        "icons": [
+            {
+                "src": "https://www.pwabuilder.com/assets/screenshots/screen1.png",
+                "sizes": "16x16"
+            }
+        ],
+        "auth": false,
+        "update": 86400
+    }
+]
 }
