--- a/manifest.json
+++ b/manifest.json
@@ -59,16 +59,17 @@
         "type": "application/json",
         "screenshots": [
             {
-                "src": "https://www.pwabuilder.com/assets/screenshots/screen1.png",
-                "sizes": "600x400",
+                "src": "/mi_andreani_512.png",
+                "sizes": "512x512",
                 "label": "The PWAmp mini-player widget"
             }
         ],
         "icons": [
-            {
-                "src": "https://www.pwabuilder.com/assets/screenshots/screen1.png",
-                "sizes": "16x16"
-            }
+          {
+            "src":"/mi_andreani_192.png",
+            "sizes":"192x192",
+            "type":"image/png"
+          }
         ],
         "auth": false,
         "update": 86400
