--- a/manifest.json
+++ b/manifest.json
@@ -10,35 +10,35 @@
   "orientation": "any", 
 "screenshots": [
   {
-    "src": "/screenshots/desktop.png",
+    "src": "https://rodrigorov3r.github.io/poc-project/screenshots/desktop.png",
     "sizes": "1806x821",
     "type": "image/png",
     "form_factor": "wide"
   },
   {
-    "src": "/screenshots/mobile.png",
+    "src": "https://rodrigorov3r.github.io/poc-project/screenshots/mobile.png",
     "sizes": "462x762",
     "type": "image/png"
   }
   ],
   "icons":[
     {
-      "src":"/mi_andreani_192.png",
+      "src":"https://rodrigorov3r.github.io/poc-project/mi_andreani_192.png",
       "sizes":"192x192",
       "type":"image/png"
     },
     {
-      "src":"/mi_andreani_256.png",
+      "src":"https://rodrigorov3r.github.io/poc-project/mi_andreani_256.png",
       "sizes":"256x256",
       "type":"image/png"
     },
     {
-      "src":"/mi_andreani_384.png",
+      "src":"https://rodrigorov3r.github.io/poc-project/mi_andreani_384.png",
       "sizes":"384x384",
       "type":"image/png"
     },
     {
-      "src":"/mi_andreani_512.png",
+      "src":"https://rodrigorov3r.github.io/poc-project/mi_andreani_512.png",
       "sizes":"512x512",
       "type":"image/png"
     }
@@ -59,14 +59,14 @@
         "type": "application/json",
         "screenshots": [
             {
-                "src": "/mi_andreani_512.png",
+                "src": "https://rodrigorov3r.github.io/poc-project/mi_andreani_512.png",
                 "sizes": "512x512",
                 "label": "The PWAmp mini-player widget"
             }
         ],
         "icons": [
           {
-            "src":"/mi_andreani_192.png",
+            "src":"https://rodrigorov3r.github.io/poc-project/mi_andreani_192.png",
             "sizes":"192x192",
             "type":"image/png"
           }
